# adversareval

./: .gitignore  BUILD  CMakeLists.txt  WORKSPACE  adversareval_googly.txt  adversareval_splash.txt  alldata.txt  dbg.txt  displaylayout.txt  gtest.BUILD  hotwheelsbin  rvr5029script  winprobgenscript  winprobgenscript2
ansi/: ansi.cpp  ansi.hpp  prog.hpp
ansicompattest/: main.cpp
bitboards/: BUILD  bitboard.cpp  bitboard.hpp
buildfiles/: eigen.BUILD  fplus.BUILD  frugallydeep.BUILD  json.BUILD  libtensorflow.BUILD
data/: gen00.txt  gen01.txt  gen02.txt  gen03.txt
hiya/: BUILD  evaluate.cpp  main.cpp
hotwheels/: bitscan.cpp  bitscan.hpp  evaluate.cpp  evaluate_nn.cpp  game.cpp  game.hpp  historytables.cpp  historytables.hpp  main.cpp  movegen.cpp  movegen.hpp  ui.cpp  ui.hpp  zobrist.cpp
minimax/: BUILD  evaluate.hpp  minimax.cpp  minimax.hpp
models/: fdeep_model.json  fdeep_model2.json  fdeep_model5.json  model.json  model.json.save  model.pb  model1.h5  model1.json  model2.h5  model2.json  model5.h5  model5.json
nn/: featureeng.cpp  nn.c  nn.cpp  nn.hpp  train.py
test/: BUILD
test/bitboards/: bitboard_test.cpp
test/minimax/: minimax_test.cpp
test/transpositiontables/: zobrist_test.cpp
tictactoe/: evaluate.cpp  game.hpp  main.cpp
transpositiontables/: transpositiontbl.cpp  transpositiontbl.hpp  zobrist.hpp
winprobgen/: evaluate.cpp  main.cpp  montecarlo.cpp  montecarlo.hpp
